# agents

./: .dockerignore  .env.template  .gitignore  Dockerfile  compose.yml  config.template.json  pyproject.toml  requirements.txt  start.sh
src/agents/camera/: __main__.py  agent.py  photo.py  receiver.py
src/agents/controller/: __main__.py  agent.py  bot_detection.py  build_maze.py  detect_cubes.py  find_path.py  get_obstacles.py  obstacles_position.py  photo.py  pov_analysis.py  receiver.py  remove_obstacles.py  send_direction.py  send_maze.py
src/agents/controller/find_path/: find_path.py
src/agents/controller/maze/: detect_obstacles.py  find_path.py  grid.py  obstacles.py  wall_detection.py
src/agents/controller/walls/: grid.py  wall_detection.py
src/agents/logger/: __main__.py  logger.py  message_receiver.py  pov_analysis.py  sender.py
src/agents/referee/: __main__.py  agent.py  button_helper.py  gate.py  state.py
src/agents/robot/: AlphaBot2.py  TRSensors.py  __main__.py  agent.py  camera.py  disco.py  distance_calibration.py  fade.py  forward_behaviour.py  forward_calibration.py  honk.py  leds_manager.py  look_around.py  move.py  pano.py  penalty_handler.py  recalibration.py  receiver.py  remove_obstacle.py  reposition.py  status.py  turn.py  turn_calibration.py
src/common/: calibration.py  config.py  export_schemas.py  launcher.py  log_mixin.py  receiver.py  request_handler.py  sender.py  utils.py
src/common/models/: base.py  camera.py  common.py  controller.py  logger.py  robot.py
src/common/schemas/: calibration.json  config.json
(+14 files in other folders)
