[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "pydantic>=2.13.3",
    "slixmpp<=1.9.1",
    "spade==4.0.3",
]

[project.optional-dependencies]
camera = [
    "opencv-python-headless>=4.13.0.92",
]
controller = [
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
]
logger = []
robot = [
    "adafruit-circuitpython-servokit>=1.3.23",
    "opencv-python-headless>=4.13.0.92",
    "rpi-gpio>=0.7.1",
    "rpi-ws281x>=5.0.0",
    "spidev>=3.8",
]
